--- a/src/index.html
+++ b/src/index.html
@@ -1,3 +1,5 @@
+<!-- NEVER EVER TOUCH THIS FILE -->
+
 <!doctype html>
 <html lang="en">
 <head>
@@ -7,7 +9,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
-<body>
+<body id="page-top">
   <app-root></app-root>
 </body>
 </html>
