--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
   <title>81522SPM</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <script src="https://kit.fontawesome.com/cd4524babb.js" crossorigin="anonymous"></script>
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body id="page-top">
