--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,11 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body id="page-top">
+  <div class="container-fluid" id="main">
+
   <app-root></app-root>
+
+</div>
+
 </body>
 </html>
